fix(resultlist): increase scrollbar width. closes #108

--- a/src/components/App.styl
+++ b/src/components/App.styl
@@ -39,12 +39,11 @@ button.pure-button i
   margin-right 0.5em
 
 ::-webkit-scrollbar
-	width             3px
 	background-color  #eee
 
 ::-webkit-scrollbar-thumb
 	border-radius    0
-	background-color #aaa
+	background-color #ccc
 
 .SearchBar .main-categories button > i.toggle
     text-align: left
